setup some install docs

--- a/docs/hugo.toml
+++ b/docs/hugo.toml
@@ -10,3 +10,4 @@ path = 'github.com/alex-shpak/hugo-book'
 [params]
 BookTheme = 'auto'
 BookSection = 'docs'
+BookRepo = 'https://github.com/bmayfi3ld/excel-scheduler'
