updated docs with real release info

--- a/docs/hugo.toml
+++ b/docs/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.com'
+baseURL = 'https://docs.excelscheduler.field3.systems'
 languageCode = 'en-us'
 title = 'Excel Class Scheduler'
 
